--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/gaganbreddy/pdf-BCD-HSA/blob/main/Gagan%20First%20AID%20%26%20CPR.pdf">Click here to view the Certificate</a></p>
+  <p><a href="Gagan First AID & CPR.pdf">Click here to view the Certificate</a></p>
 </html>
